--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,1 +1,28 @@
+name: Cypress Test
 
+on:
+  pull_request:
+    - develop
+
+  
+jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v1
+
+      - name: Use Node.js 21.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 21.x  
+
+      - name: 🧰 Install Deps
+        run: npm install
+
+      - name: Run Build
+        run: npm run build
+
+      - name: Run Tests
+        run: npm run test
