--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -2,9 +2,9 @@ name: Cypress Test
 
 on:
   pull_request:
-    - develop
+    branches:
+      - develop
 
-  
 jobs:
   test:
     runs-on: ubuntu-latest
